# RefEngine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  backend-reliability.md  data-flow.md  privacy-threat-model.md  release-1.0.0.md  scope.md  testing-strategy.md  ufv-reference-rule-catalog.md
docs/decisions/: ADR-001-local-first.md  ADR-002-sqlite.md  ADR-003-page-level-processing.md  ADR-004-deterministic-formatting.md  ADR-006-local-workspace-folders.md  ADR-008-output-history.md  ADR-010-warning-status.md  ADR-013-metadata-ocr-sampling.md  ADR-016-visible-browser-print-metadata.md  ADR-017-reference-quality-gate.md  ADR-019-local-correction-memory.md
examples/bibtex/: ingrao2015.bib
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
input/: README.txt
openapi/: refengine.openapi.json
output/: README.md
output/history/: README.md
scripts/: check.sh  export_openapi.py
src/refengine/: __init__.py  __main__.py  cli.py  logging_config.py
tests/fixtures/: README.md
tests/integration/: test_sqlite_repository.py
tests/unit/: test_all_catalog_formatters.py  test_api_backend_flow.py  test_api_repository.py  test_author_parser.py  test_bibliographic_candidate_record.py  test_bibliographic_candidates_exporter.py  test_bibtex_import.py  test_bibtex_merge.py  test_candidate_resolver.py  test_cli_workspace.py  test_correction_memory.py  test_direct_tesseract_adapter.py  test_document_classifier.py  test_document_classifier_profiles.py  test_extraction_cache.py  test_failure_diagnostics.py  test_failure_isolation.py  (+32 more)
(+65 files in other folders)
