[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "refengine-local"
version = "1.0.0"
description = "Local-first application for extracting, reviewing, and generating UFV academic references from PDF, BibTeX, and RIS files."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Arleu Júnior" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "PyMuPDF>=1.24,<2",
  "pydantic>=2.8,<3",
  "python-docx>=1.1,<2",
  "Pillow>=10.4,<13",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pre-commit>=3.8,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
refengine = "refengine.cli:app"
refengine-api = "refengine.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/refengine"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_document_classifier.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["refengine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/refengine"]
branch = true

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
